# search_engine_jeopardy

./: Cargo.toml
src/: jeopardy_answer.rs  main.rs  search_engine.rs  searchers.rs  stopword_sanitizer.rs  text_sanitizer.rs
src/searchers/: bing.rs  google.rs
